1.5/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: deployment-backend
  ports:
  - name: https-multitool
    protocol: TCP
    port: 9001
    targetPort: 11443
  - name: http-multitool
    protocol: TCP
    port: 9002
    targetPort: 8080
