1.5/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: deployment-frontend
  ports:
  - name: http-nginx
    protocol: TCP
    port: 9003
    targetPort: 80
  - name: https-nginx
    protocol: TCP
    port: 9004
    targetPort: 443
